--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -20,4 +20,8 @@
   --gray-61: #616870;
   --gray-30: #303235;
   --gray-e0: #eef0f3;
+
+  // измерения
+  --side-width: 320px;
+  --side-offset: 8px;
 }
