--- a/src/partials/side.html
+++ b/src/partials/side.html
@@ -1,4 +1,4 @@
-<div class="side">
+<div class="side" data-side>
   <ul class="side__list list-reset">
     <li class="side__item">
       <a class="side__link span-icon" href="#">
