--- a/src/scss/_vars.scss
+++ b/src/scss/_vars.scss
@@ -24,4 +24,7 @@
   // измерения
   --side-width: 320px;
   --side-offset: 8px;
+  --header-head-width: 34px;
+  --header-head-height: 34px;
+  --blur: blur(10px);
 }
