--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -6,3 +6,8 @@
 
 // подключения компонентов страницы
 @import "./components/side";
+@import "./components/header";
+@import "./components/content";
+@import "./components/switch";
+@import "./components/settings";
+@import "./components/hi";
