--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -7,7 +7,7 @@
   <title>optic-note</title>
   <link
     rel="preload"
-    href="fonts/MullerRegular.woff2"
+    href="fonts/Inter-Medium.woff2"
     as="font"
     type="font/woff2"
     crossorigin
